--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,6 @@
 ---
 import BaseLayout from "./../layouts/Base.astro";
-import { Code } from "astro:components";
-
-const onChange = (code: string) => {
-  console.log(code);
-};
+import { EditorView } from "@codemirror/view";
 ---
 
 <BaseLayout>
@@ -29,7 +25,18 @@ const onChange = (code: string) => {
       A <em>hello world program</em> in Gom looks like following (you'll soon be
       able to run it):
     </p>
-    <div class="mt-4" id="editor"></div>
+    <div class="mt-4 relative" id="editor">
+      <button
+        class="absolute top-0 right-0 bg-gray-400 text-white p-2 pl-4 pr-4 cursor-pointer z-10 text-sm hover:bg-gray-500 transition-colors"
+        style="font-family: Geist Mono;"
+        id="run"
+      >
+        ▶ Run
+      </button>
+    </div>
+    <div class="mt-4 p-4 bg-gray-100 text-gray-800">
+      <pre id="output" class="text-sm">→ Logs will appear here</pre>
+    </div>
   </div>
   <script>
     import { javascript } from "@codemirror/lang-javascript";
@@ -58,6 +65,41 @@ fn main() {
       state: startState,
       parent: document.querySelector("#editor")!,
     });
-    // editor.state.doc.toString()
+
+    function runCode() {
+      const code = editor.state.doc.toString();
+      console.log(code);
+      const output = document.querySelector("#output")!;
+      const URL = "https://gom-compiler.mohitkarekar.com/api/compile";
+      fetch(URL, {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json",
+          "Access-Control-Allow-Origin": "*",
+        },
+        body: JSON.stringify({ src: code }),
+      })
+        .then((response) => {
+          if (!response.body) return;
+          const reader = response.body.getReader();
+          // @ts-ignore
+          reader.read().then(function pump({ done, value }) {
+            if (done) {
+              // Do something with last chunk of data then exit reader
+              output.textContent += "→ Done";
+              return;
+            }
+            // Otherwise do something here to process current chunk
+            output.textContent += value.toString();
+            // Read some more, and call this function again
+            return reader.read().then(pump);
+          });
+        })
+        .catch((err) => {
+          console.error(err);
+          output.textContent = "→ Error: " + err;
+        });
+    }
+    document.querySelector("#run")!.addEventListener("click", runCode);
   </script>
 </BaseLayout>
