--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import { EditorView } from "@codemirror/view";
 ---
 
 <BaseLayout>
-  <div class="max-w-3xl mx-auto p-12">
+  <div class="max-w-3xl mx-auto p-6 sm:p-12">
     <h1 class="text-5xl font-bold mb-4">
       The <span class="gom-name"><em>Gom</em></span> Programming Language
     </h1>
